Correct vertical align of menu toggle
This moves the toggle button content into the middle of the
navigation bar. The hidden links offset for absolute positiioning
has been updated to reflect the visual vertical change

Thanks!

--- a/docs/_sass/minimal-mistakes/_navigation.scss
+++ b/docs/_sass/minimal-mistakes/_navigation.scss
@@ -288,7 +288,7 @@
     position: absolute;
     top: 100%;
     right: 0;
-    margin-top: 15px;
+    margin-top: 8px;
     padding: 5px;
     border: 1px solid $border-color;
     border-radius: $border-radius;
